--- a/app/appdata/config/config.json
+++ b/app/appdata/config/config.json
@@ -1,1 +1,1 @@
-{"chosen_plugins": {"Assistant": "pan", "UserInterface": "CLI", "Lexicon": "classic", "Formal": "analytic_freedom", "Output": "actual_tree"}, "accessibility": 4}
+{"chosen_plugins": {"Assistant": "pan", "UserInterface": "CLI", "Lexicon": "classic", "Formal": "analytic_freedom", "Output": "actual_tree", "Translate": "pl"}, "accessibility": 4}
